--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,26 +1,48 @@
 @import "tailwindcss";
 
+/* @type postcss */ 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
-}
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
+  /* Light Mode Variables */
+  --light-mode-background: #E9E9E9;
+  --light-mode-text-color: #1A1A1A;
+  --light-mode-color-surface: #E1E1E1;
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  /* Dark Mode Variables */
+  --dark-mode-background: #0d0d0d;
+  --dark-mode-text-color: #f5f5f5;
+  --dark-mode-color-surface: #1a1a1a;
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  background: var(--bg);
+  color: var(--text-color);
+  font-family: Arial, Helvetica, sans-serif; 
+  transition: background 500ms ease-in-out, color 1000ms ease-in-out;
+}
+
+.light-mode-background {
+  --bg: var(--light-mode-background);
+  --text-color: var(--light-mode-text-color);
+  --color-surface: var(--light-mode-color-surface);
+  
+}
+
+.dark-mode-background {
+  --bg: var(--dark-mode-background);            
+  --text-color: var(--dark-mode-text-color);      
+  --color-surface: var(--dark-mode-color-surface);
+}
+
+.nav-bar {
+  display: flex;
+  overflow: hidden;
+  background-color: var(--color-surface);
+
 }
